--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ a {
 }
 .blue-container .circle {
   background-image: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
-  height: 120px;
-  width: 120px;
+  height: 150px;
+  width: 150px;
   border-radius: 50%;
   display: flex;
   flex-direction: column;
@@ -150,15 +150,17 @@ a {
 
 @media (min-width: 650px) {
   .attribution {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     justify-content: center;
-    margin-top: 200px;
+    margin: 200px 24px 0;
   }
 
   .blue-container {
     padding: 0 24px;
     border-radius: 35px;
     padding-bottom: 36px;
+    height: 100%;
   }
 
   .blue-container p {
@@ -166,5 +168,12 @@ a {
     font-size: 1.4em;
     max-width: 14rem;
     margin: 0;
+  }
+
+  .white-container {
+    padding: 24px;
+    margin: 0;
+    border-radius: 0 30px 30px 0;
+    box-shadow: 10px 10px 20px hsl(241, 100%, 95%);
   }
 }
