--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ a {
   font-size: 11px;
   text-align: center;
 }
+.attribution1 {
+  margin-top: 32px;
+  font-size: 11px;
+  text-align: center;
+}
 
 .blue-container {
   background-image: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
@@ -83,7 +88,7 @@ a {
 
 .btn {
   display: inline-block;
-  padding: 16px 24px;
+  padding: 14px 24px;
   background: hsl(224, 30%, 27%);
   color: #fff;
   font-size: 1.6em;
@@ -106,7 +111,7 @@ a {
 .white-container ul li {
   display: flex;
   border-radius: 10px;
-  padding: 12px;
+  padding: 10px;
   margin-bottom: 16px;
   display: flex;
   flex-direction: row;
@@ -151,7 +156,7 @@ a {
 @media (min-width: 650px) {
   .attribution {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 300px 300px;
     justify-content: center;
     margin: 200px 24px 0;
   }
@@ -168,6 +173,20 @@ a {
     font-size: 1.4em;
     max-width: 14rem;
     margin: 0;
+  }
+
+  .blue-container .circle {
+    background-image: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
+    height: 170px;
+    width: 170px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: hsl(0, 0%, 75%);
+    font-weight: 500;
+    font-size: 1.4em;
+    margin-bottom: 24px;
   }
 
   .white-container {
